# SFSU-SpineCurvature

./: .gitignore
01_inputMhd/: CMakeLists.txt  main.cpp
02_inputMhdPython/: .gitignore  .gitignore~  simpleVTK.py
02_inputMhdPython/src/: inputMHD.ipynb  simpleVTK.ipynb
